discussion/kv_engine/171234/171234_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51135: SubdocMultiMutation should only require Upsert

The SubdocMultiMutation should only require the Upsert privilege
and not the Read privilege

Change-Id: I5d0fec3032d4187f48b147899c2b9859653723fb

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-02-23 09:11:51.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-23 09:14:53.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44110/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44110/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37160/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37160/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5390/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5390/ )

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5390/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16557/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17495/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17495/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18531/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18531/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25898/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25898/ )

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25898/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17823/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17823/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5449/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5449/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15740/ : FAILURE

clang-tidy found the following problems:

<pre>
error: too many errors emitted, stopping now [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:11:31: error: use of undeclared identifier "cb" [clang-diagnostic-error]
class RegressionTest : public cb::test::ClusterTest {
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:11:41: error: expected class name [clang-diagnostic-error]
class RegressionTest : public cb::test::ClusterTest {
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:17:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TEST_F(RegressionTest, MB51135) {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:17:24: error: unknown type name "MB51135" [clang-diagnostic-error]
TEST_F(RegressionTest, MB51135) {
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:19:5: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    cluster->getAuthProviderService().upsertUser({"MB51135", "MB51135", R"(
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:34:4: error: no matching literal operator for call to "operator""_json" with arguments of types "const char *" and "unsigned long", and no matching literal operator template [clang-diagnostic-error]
})"_json});
   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:36:19: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto bucket = cluster->getBucket("default");
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:37:39: error: use of undeclared identifier "Vbid" [clang-diagnostic-error]
    auto conn = bucket->getConnection(Vbid(0));
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:42:9: error: unknown type name "BinprotSubdocMultiMutationCommand" [clang-diagnostic-error]
        BinprotSubdocMultiMutationCommand cmd;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:44:24: error: use of undeclared identifier "mcbp" [clang-diagnostic-error]
        cmd.addDocFlag(mcbp::subdoc::doc_flag::Add);
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:45:25: error: use of undeclared identifier "cb" [clang-diagnostic-error]
        cmd.addMutation(cb::mcbp::ClientOpcode::SubdocDictAdd,
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:46:25: error: use of undeclared identifier "SUBDOC_FLAG_MKDIR_P" [clang-diagnostic-error]
                        SUBDOC_FLAG_MKDIR_P,
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:50:9: error: unknown type name "BinprotSubdocMultiMutationResponse" [clang-diagnostic-error]
        BinprotSubdocMultiMutationResponse resp;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:52:19: error: use of undeclared identifier "cb" [clang-diagnostic-error]
        EXPECT_EQ(cb::mcbp::Status::Success, resp.getStatus());
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:57:9: error: unknown type name "BinprotSubdocMultiMutationCommand" [clang-diagnostic-error]
        BinprotSubdocMultiMutationCommand cmd;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:59:25: error: use of undeclared identifier "cb" [clang-diagnostic-error]
        cmd.addMutation(cb::mcbp::ClientOpcode::SubdocDictAdd,
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:60:25: error: use of undeclared identifier "SUBDOC_FLAG_MKDIR_P" [clang-diagnostic-error]
                        SUBDOC_FLAG_MKDIR_P,
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:64:9: error: unknown type name "BinprotSubdocMultiMutationResponse" [clang-diagnostic-error]
        BinprotSubdocMultiMutationResponse resp;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:66:19: error: use of undeclared identifier "cb" [clang-diagnostic-error]
        EXPECT_EQ(cb::mcbp::Status::Success, resp.getStatus());
                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15740/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/regression_tests.cc:11:31:
error: use of undeclared identifier "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15740/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14587/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
